--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Pull latest before commit (fixes the fetch-first error)
       run: |
-        git config user.name "mahidahr1999"
+        git config user.name "mahidhar1999"
         git config user.email "mahidhar1999@gmail.com"
         git pull --rebase origin master
 
